--- a/process/stage_one/module_one/HomeWork/IPersistence/pom.xml
+++ b/process/stage_one/module_one/HomeWork/IPersistence/pom.xml
@@ -19,6 +19,7 @@
 
 
     <dependencies>
+
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
@@ -47,6 +48,11 @@
             <version>1.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
 
     </dependencies>
 </project>
